--- a/Python/script/9일차 복습.ipynb
+++ b/Python/script/9일차 복습.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "np.arange(start,last, step)\n",
     "np.cov() 공분산\n",
@@ -28,8 +30,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from numpy.random import randn\n",
     "랜덤함수 호출\n",
@@ -44,8 +48,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from matplotlib.pyplot as plt\n",
     "\n",
@@ -81,8 +87,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "pandas : Series, DataFreme, Panel\n",
     "numpy 방식의 인덱싱이 가능, + dict(중복을 허용, 순서를보장)\n",
@@ -114,11 +122,6 @@
     "dt.str.count('a') 시리즈안에 어떤거에 몇개들었는지 파악 \n",
     "dt.plot.kde() 곡선으로 plot 표현\n",
     "\n",
-    "dataframe !!\n",
-    "\n",
-    "\n",
-    "data.iloc[:3,:2] # 3행 2열 표시\n",
-    "data.loc[:'행이름',:'열이름'] # 행열 표시해줌 ㅋㅋ\n",
     "\n",
     "데이터프레임 값중에서 전체데이터를 변경하려면\n",
     "그냥 숫자를 대입하면 들어감\n",
@@ -126,6 +129,27 @@
     "\n",
     "Series 한개만든뒤\n",
     "Index값(행이름)을 정확하게 해서 넣어줘야 값이 들어감.! 중요!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe !!\n",
+    "\n",
+    "df[df['열이름'].isin(['밸류값','밸류값2'])] # 필터링함수\n",
+    "\n",
+    "iloc는 위치 즉 숫자로찾고\n",
+    "data.iloc[:3,:2] # 3행 2열 표시\n",
+    "loc는 라벨 즉 문자로찾는다\n",
+    "대신 행자리에 dates[] 를 넣으면 숫자로 찾을수있음!\n",
+    "data.loc[:'행이름',:'열이름'] # 행열 표시해줌 ㅋㅋ\n",
+    "\n",
+    "data.dropna(how='any') # 결측치 모두 날려버리기\n",
+    "data.fillna(value=5) # 결측치 5로 채우기\n",
+    "pd.isna(data) # nan 값 확인"
    ]
   },
   {
