--- a/Python/script/10일차 복습.ipynb
+++ b/Python/script/10일차 복습.ipynb
@@ -34,7 +34,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "-- dataframe\n",
+    "\n",
+    "df.applymap(type).head(1) # 전체 열들의 데이터타입\n",
+    "df.dtypes # 위에랑 비슷\n",
+    "df.describe() # 여러 비교해줌\n",
+    "df.groupby('type').agg([np.mean,np.std])  # 열별로 평균값,표준편차값 구해줌 단 type이라는 열로 묶어서!\n",
+    "df['열이름'] = df['열이름'].str.replace('$','') # dataframe 안에 열이름 지정후에 $ 표시를 공백으로 변경\n",
+    "df['열이름'] = df['열이름'].astype('float') # 데이터 타입을 float으로 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# % 들어간 밸류값 변경방법\n",
+    "def convert_percent(val) :\n",
+    "    new_val = val.replace(\"%\", '')\n",
+    "    return float(new_val) / 100\n",
+    "df['%들어간열'] = df['%들어간열'].map(convert_percent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 문자하고 숫자가 같이 있는경우\n",
+    "df['문자,숫자있는열'] = pd.to_numeric(df['문자,숫자있는열'],\n",
+    "                              errors = 'coerce') # ignore"
+   ]
   },
   {
    "cell_type": "code",
