--- a/Python/script/10일차 복습.ipynb
+++ b/Python/script/10일차 복습.ipynb
@@ -42,7 +42,31 @@
     "df.describe() # 여러 비교해줌\n",
     "df.groupby('type').agg([np.mean,np.std])  # 열별로 평균값,표준편차값 구해줌 단 type이라는 열로 묶어서!\n",
     "df['열이름'] = df['열이름'].str.replace('$','') # dataframe 안에 열이름 지정후에 $ 표시를 공백으로 변경\n",
-    "df['열이름'] = df['열이름'].astype('float') # 데이터 타입을 float으로 변경"
+    "df['열이름'] = df['열이름'].astype('float') # 데이터 타입을 float으로 변경\n",
+    "df.isnull().any() # null값 확인 열별로\n",
+    "df.isnull().values.sum()) # null의 개수\n",
+    "df.dropna(axis=1, how='any') # 열별로 na값 확인후 행 날려버림\n",
+    "df.columns.to_list # 열별로 공백확인\n",
+    "df.columns = df.columns.str.strip() # 공백제거 lstrip, rstrip\n",
+    "df['age'].fillna('', inplace=True) # age안에 있는 밸류중 na값을 공백으로변환\n",
+    "df['age'] = pd.to_numeric(df['age'], errors='ignore') #age 열 안에 있는 밸류값들을 numeric으로 전환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sql 연동\n",
+    "conn = pymysql.connect(host=\"127.0.0.1\", port=3306, user='root', password='root',\n",
+    "                      db = 'jeju', charset = 'utf8mb4',\n",
+    "                      cusorclass = pymysql.cursors.DictCursor)\n",
+    "\n",
+    "cursor = conn.cursor() # 커서에 conn.cursor입력\n",
+    "cursor.execute(\"select * from student\") # execute로 sql에 명령문 전달\n",
+    "rez = cursor.fetchall() # list type  이렇게해야 옮겨지나?\n",
+    "rez"
    ]
   },
   {
