--- a/Python/script/10일차 복습.ipynb
+++ b/Python/script/10일차 복습.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import scipy as sp\n",
+    "sp.stats.spearmanr(x,y) # 스피어만의 순위 상관계수 ( 두 변수를 순위로 변환 후 순위에 대해 상관계쑤 구함)\n",
+    "sp.stats.kendalltau(x,y) # 켄달 토우의 순위 상관계수 ( 순위가 같은 짝 concordant의 수를 이용하여 계산 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "st.count(\"t\") # s안에 t가 몇개있느냐 대소문자를 구분함\n",
     "st.lower() # 소문자로 바꿈   \n",
     "st.find(\"that\")  # 단어별 \n",
@@ -26,7 +37,19 @@
     "st.str.len() # 문자수 카운트해줌  \n",
     "st.str.startswith('첫문자') # 첫문자열로 파악해줌\n",
     "st.str.split() # 한 list를 분류시켜줌\n",
-    "st.str.contains('A', na = False) # 포함하는지 여부  /  True, False 출력"
+    "st.str.contains('A', na = False) # 포함하는지 여부  /  True, False 출력\n",
+    "\n",
+    "# 정규표현식\n",
+    "# []: 선택, + : 여러개\n",
+    "df.str.extract('([A-Za-z]+)', expand=False)\n",
+    "df.str.findall(r'^[^AEIOU].*[^aeiou]$') # 처음이 AEIOU로 시작하지않고, 끝이 aeiou가 아닌것\n",
+    "\n",
+    "import re\n",
+    "text = \"아이아아어어 101-4565-4564 , \"\n",
+    "regex = re.compile(r'\\d\\d\\d-\\d\\d\\d\\d-\\d\\d\\d\\d') # 000-0000-0000\n",
+    "mat = regex.search(text)\n",
+    "number = mat.group() # 나온숫자들 그룹화\n",
+    "print(number)"
    ]
   },
   {
