--- a/Python/script/9일차 복습.ipynb
+++ b/Python/script/9일차 복습.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "np.arange(start,last, step)\n",
     "np.cov() 공분산\n",
-    "np.corrcoef() 상관계수 **\n",
+    "np.corrcoef(대푯값) 상관계수 **\n",
     "np.average(array,weights=array2) 두개의 array의 평균을 구해줌\n",
     "np.sqrt() / root\n",
     "np.var(array) 분산\n",
@@ -54,6 +54,7 @@
    "outputs": [],
    "source": [
     "from matplotlib.pyplot as plt\n",
+    "%matplotlib inline # 초장에 입력 ㅋㅋ\n",
     "\n",
     "plt.sacatter()  산포도 출력\n",
     "plt.show()  표출력 **\n",
