--- a/Python/script/10일차 복습.ipynb
+++ b/Python/script/10일차 복습.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import scipy as sp\n",
     "sp.stats.spearmanr(x,y) # 스피어만의 순위 상관계수 ( 두 변수를 순위로 변환 후 순위에 대해 상관계쑤 구함)\n",
-    "sp.stats.kendalltau(x,y) # 켄달 토우의 순위 상관계수 ( 순위가 같은 짝 concordant의 수를 이용하여 계산 )"
+    "sp.stats.kendalltau(x,y) # 켄달 토우의 순위 상관계수 ( 순위가 같은 짝 concordant의 수를 이용하여 계산 )\n",
+    " #  fit_predic 모델을 생성 _ predict 예측"
    ]
   },
   {
