--- a/Python/script/12일차.ipynb
+++ b/Python/script/12일차.ipynb
@@ -1383,34 +1383,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\82105\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정밀도 0.8571428571428571\n",
-      "민감도 0.75\n",
-      "F1 스코어 0.7999999999999999\n",
+      "정밀도 0.8666666666666667\n",
+      "민감도 1.0\n",
+      "F1 스코어 0.9285714285714286\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.88      0.82         8\n",
-      "           1       0.86      0.75      0.80         8\n",
+      "           0       1.00      0.87      0.93        15\n",
+      "           1       0.87      1.00      0.93        13\n",
       "\n",
-      "    accuracy                           0.81        16\n",
-      "   macro avg       0.82      0.81      0.81        16\n",
-      "weighted avg       0.82      0.81      0.81        16\n",
+      "    accuracy                           0.93        28\n",
+      "   macro avg       0.93      0.93      0.93        28\n",
+      "weighted avg       0.94      0.93      0.93        28\n",
       "\n",
-      "[[7 1]\n",
-      " [2 6]]\n"
+      "[[13  2]\n",
+      " [ 0 13]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ICT01_06\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "C:\\Users\\82105\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n"
      ]
     }
@@ -1418,11 +1434,12 @@
    "source": [
     "# 문제\n",
     "# 분류에 대한 \n",
+    "# LogisticRegression\n",
     "import sklearn.metrics as metrics\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "X,y = make_classification(n_samples=16, n_features=2,\n",
+    "X,y = make_classification(n_samples=28, n_features=2,\n",
     "                         n_informative = 2, n_redundant =0,\n",
     "                         random_state=0)\n",
     "\n",
@@ -1432,6 +1449,7 @@
     "\n",
     "model = LogisticRegression() # model 만들고\n",
     "model.fit(X,y) # 계수 완성 fit하고\n",
+    "# model1 = LogisticRegression().fit(X,y)\n",
     "y_hat = model.predict(X) # predict 하면 끝!\n",
     "# 정밀도(precision)\n",
     "print(\"정밀도\", metrics.precision_score(y,y_hat))\n",
@@ -1443,46 +1461,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "훈련세트 점수 : 0.750\n",
-      "테스트 세트 점수 : 1.000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ICT01_06\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(28,)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 1) LogisticRegression 을 실시하시오\n",
-    "# select : model_select, Variable(변수선택), feature extraction\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "# train data = 0.75 / test data = 0.25 비율로 나눔\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y, stratify = y,random_state=42) # seed 값\n",
-    "# 층화 \n",
-    "logreg= LogisticRegression().fit(X_train,y_train)\n",
-    "# score = 정분류를 재라\n",
-    "print(\"훈련세트 점수 : {:.3f}\".format(logreg.score(X_train,y_train)))\n",
-    "\n",
-    "# 과대적합\n",
-    "print(\"테스트 세트 점수 : {:.3f}\".format(logreg.score(X_test,y_test)))"
+    "y_hat.shape"
    ]
   },
   {
@@ -1551,6 +1545,71 @@
     "평가 : 분류 평가 classification_score\n",
     "        예측 평가 accuracy score\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "훈련세트 점수 : 0.905\n",
+      "테스트 세트 점수 : 0.857\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\82105\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 샘플링내서 Train 값 Test값 나눠주는 함수\n",
+    "# select : model_select, Variable(변수선택), feature extraction\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "# train data = 0.75 / test data = 0.25 비율로 나눔\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, stratify = y,random_state=42) # seed 값\n",
+    "# 층화 \n",
+    "logreg= LogisticRegression().fit(X_train,y_train)\n",
+    "# score = 정분류를 재라\n",
+    "print(\"훈련세트 점수 : {:.3f}\".format(logreg.score(X_train,y_train)))\n",
+    "\n",
+    "# 과대적합\n",
+    "print(\"테스트 세트 점수 : {:.3f}\".format(logreg.score(X_test,y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import GroupKFold\n",
+    "# model_selection 모델데이터를 구분\n",
+    "# 1,2  1\n",
+    "# 3,4  2\n",
+    "\n",
+    "# 5,6  3\n",
+    "# 7,8  4\n",
+    "X = np.array([[1,2],[3,4],[5,6],[7,8]]) # 4x2 변수2개\n",
+    "y = np.array([1,2,3,4]) # 종속변수\n",
+    "groups = np.array([0,0,2,2]) # 그룹을 구분\n",
+    "group_kfold = GroupKFold(n_splits=2) # 그룹을 2개로 나누겠다\n",
+    "group_kfold.get_n_splits(X,y,groups) \n",
+    "print(group_kfold)\n",
+    "for train_index, test_index in group_kfold.split(X,y,groups):\n",
+    "    print(\"TRAIN:\",train_index,\"TEST:\",test_index)\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "    print(X_train, X_test, y_train, y_test)"
    ]
   }
  ],
