--- a/Python/script/14일차.ipynb
+++ b/Python/script/14일차.ipynb
@@ -333,7 +333,7 @@
     "    e,V = np.linalg.eigh(np.dot(C,C.T)) # 고유치와 , 고유벡터\n",
     "    print(\"V는\", V.shape) # 3*3\n",
     "    print(\"차원은\", V[:X.shape[1]]) # 2\n",
-    "    return np.dot(X,V[:X.shape[1]]) # 3*2\n",
+    "    return np.dot(X,V[:X.shape[1]]) # 2*3\n",
     "print(X.shape)\n",
     "print(X.shape[1])\n",
     "print(\"데이터의 차원은\", X.shape)\n",
@@ -631,7 +631,7 @@
     "\n",
     "\n",
     "\n",
-    "k 값을 결정 , 중심갑 - 두개를 넣어야하는데 잘모름..ㅋㅋ"
+    "k 값을 결정 , 중심값 - 두개를 넣어야하는데 잘모름..ㅋㅋ"
    ]
   },
   {
@@ -965,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IMAGE~~ 변형 및 출력~ KMEANS~"
+    "# IMAGE~ 변형 및 출력 KMEANS~"
    ]
   },
   {
@@ -1859,7 +1859,12 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1978,12 +1983,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 컴퓨터가 주성분분석을 통해 찾아낸 주성분\n",
-    "# 100개를 합하여 출력 원본이미지를 복원 -> ANN 의 가중치 특징도 설명할수없어~"
+    "# 100개를 여 출력 원본이미지를 복원 -> ANN 의 가중치 특징도 설명할수없어~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://datascienceschool.net/view-notebook/f43be7d6515b48c0beb909826993c856/\n",
+    "오늘의 정리\n",
+    "StandardScaler(X): 평균이 0과 표준편차가 1이 되도록 변환.\n",
+    "RobustScaler(X): 중앙값(median)이 0, IQR(interquartile range)이 1이 되도록 변환.\n",
+    "MinMaxScaler(X): 최대값이 각각 1, 최소값이 0이 되도록 변환\n",
+    "MaxAbsScaler(X): 0을 기준으로 절대값이 가장 큰 수가 1또는 -1이 되도록 변환"
    ]
   }
  ],
