--- a/Python/script/1_project/1차프로젝트 문제점.ipynb
+++ b/Python/script/1_project/1차프로젝트 문제점.ipynb
@@ -31,20 +31,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "기본 순서도"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 기본 예측문제에 사용되는 패키지\n",
-    "# MSE / RMSE를 측정하기 위한 패키지\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "# 다중회귀분석을 하기 위한 패키지\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "# Traing / Test 세트를 나눠줄 패키지\n",
     "from sklearn.model_selection import train_test_split \n",
-    "# \n",
-    "from sklearn.preprocessing import scale, minmax_scale\n",
+    "# 전처리하는 세트\n",
+    "from sklearn.preprocessing import scale, robust_scale, minmax_scale , maxabs_scale\n",
+    "from sklearn.preprocessing import MinMaxScaler # MinMax 점수\n",
+    "from sklearn.preprocessing import StandardScaler # Z 점수\n",
+    "\n",
+    "# 다중회귀분석을 하기 위한 패키지\n",
+    "from sklearn.linear_model import LinearRegression # 이놈만 coef_ / intercept_ 가 나옴. y = a*x + b / coef는 x / intercept는 b\n",
+    "from sklearn.linear_model import Lasso,Ridge,Hinge # 규제모델\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import VotingRegressor # 여러모델을 상대로 투표방식으로 재검증\n",
+    "\n",
+    "# MSE / RMSE를 측정하기 / 모델 검증단계.\n",
+    "from sklearn.metrics import mean_squared_error # MSE / RMSE\n",
+    "from sklearn.metrics import mean_absolute_error \n",
+    "\n",
     "\n"
    ]
   },
