--- a/Python/script/1_project/1_project2.ipynb
+++ b/Python/script/1_project/1_project2.ipynb
@@ -1113,6 +1113,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
    "outputs": [
@@ -1135,7 +1142,7 @@
     "    MLPRegressor(hidden_layer_sizes=[1024, 512, 4], max_iter=5000, alpha=0.005, random_state=42),\n",
     "]\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size =0.7, test_size=0.3)\n",
-    "\n",
+    "print(ㅌ.__class__)\n",
     "for m in models:\n",
     "    m.fit(x_train, y_train)\n",
     "    print(m.__class__)\n",
@@ -1263,6 +1270,37 @@
     "\n",
     "print('Logi.Regre robust점수 정확도:%.2f'%(logreg.score(scaler,y)*100),\"%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.__class__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
