--- a/Python/script/Tensorflow1.14.0/tensor 1일차.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor 1일차.ipynb
@@ -1849,6 +1849,29 @@
     "plt.legend(loc='upper right')\n",
     "plt.show() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 오늘 정리\n",
+    "미니배치를 하는이유\n",
+    "\n",
+    "엑티베이션 : 선형을 비선형으로 바꿔서 회귀와 분류를 구분\n",
+    "            :예측과 분류를 나누고\n",
+    "        \n",
+    "accuracy를 이용해서 경사하강법을 하지 못하고 function : accuracy는 미분이 안되고 0~1로 되ㅐ어서\n",
+    "    \n",
+    "    회귀일땐 MSE\n",
+    "    분류 :Auto\n",
+    "        \n",
+    "    경사하강법이 해결하는 문제 : 러닝레이트, 기울기\n",
+    "        \n",
+    "graph를 만들고 세션으로 실행\n",
+    "그라프는 실행되지 않고 세선으로 꼭지점에서 실행"
+   ]
   }
  ],
  "metadata": {
