--- a/Python/script/1_project/1조/규진이누나.ipynb
+++ b/Python/script/1_project/1조/규진이누나.ipynb
@@ -1866,7 +1866,8 @@
     "seed = 3\n",
     "X_train, X_test, y_train, y_test = train_test_split(minmax_X, y, random_state=seed)\n",
     "result1 = sm.OLS(y_train, X_train).fit()\n",
-    "print(result1.summary())"
+    "print(result1.summary())\n",
+    "\n"
    ]
   },
   {
@@ -2465,5 +2466,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
