Update tensor 2일차 CNN 복습.ipynb

--- a/Python/script/Tensorflow1.14.0/tensor 2일차 CNN 복습.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor 2일차 CNN 복습.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,167 @@
       "epochs =  3 , step =  200 , loss_val =  0.027533673\n",
       "epochs =  3 , step =  300 , loss_val =  0.07107118\n",
       "epochs =  3 , step =  400 , loss_val =  0.13237642\n",
-      "epochs =  3 , step =  500 , loss_val =  0.020523755\n"
+      "epochs =  3 , step =  500 , loss_val =  0.020523755\n",
+      "epochs =  4 , step =  0 , loss_val =  0.0043154224\n",
+      "epochs =  4 , step =  100 , loss_val =  0.057921235\n",
+      "epochs =  4 , step =  200 , loss_val =  0.06714122\n",
+      "epochs =  4 , step =  300 , loss_val =  0.04731332\n",
+      "epochs =  4 , step =  400 , loss_val =  0.050157852\n",
+      "epochs =  4 , step =  500 , loss_val =  0.04082594\n",
+      "epochs =  5 , step =  0 , loss_val =  0.06742267\n",
+      "epochs =  5 , step =  100 , loss_val =  0.07074553\n",
+      "epochs =  5 , step =  200 , loss_val =  0.045516204\n",
+      "epochs =  5 , step =  300 , loss_val =  0.053218767\n",
+      "epochs =  5 , step =  400 , loss_val =  0.010024323\n",
+      "epochs =  5 , step =  500 , loss_val =  0.019124066\n",
+      "epochs =  6 , step =  0 , loss_val =  0.0076436843\n",
+      "epochs =  6 , step =  100 , loss_val =  0.09225199\n",
+      "epochs =  6 , step =  200 , loss_val =  0.02946373\n",
+      "epochs =  6 , step =  300 , loss_val =  0.05421443\n",
+      "epochs =  6 , step =  400 , loss_val =  0.046618905\n",
+      "epochs =  6 , step =  500 , loss_val =  0.04937821\n",
+      "epochs =  7 , step =  0 , loss_val =  0.0087888045\n",
+      "epochs =  7 , step =  100 , loss_val =  0.013550561\n",
+      "epochs =  7 , step =  200 , loss_val =  0.093407825\n",
+      "epochs =  7 , step =  300 , loss_val =  0.06309866\n",
+      "epochs =  7 , step =  400 , loss_val =  0.014607996\n",
+      "epochs =  7 , step =  500 , loss_val =  0.08996975\n",
+      "epochs =  8 , step =  0 , loss_val =  0.009268719\n",
+      "epochs =  8 , step =  100 , loss_val =  0.05041671\n",
+      "epochs =  8 , step =  200 , loss_val =  0.085674874\n",
+      "epochs =  8 , step =  300 , loss_val =  0.025663385\n",
+      "epochs =  8 , step =  400 , loss_val =  0.06654913\n",
+      "epochs =  8 , step =  500 , loss_val =  0.003326205\n",
+      "epochs =  9 , step =  0 , loss_val =  0.019025318\n",
+      "epochs =  9 , step =  100 , loss_val =  0.009696263\n",
+      "epochs =  9 , step =  200 , loss_val =  0.0144021725\n",
+      "epochs =  9 , step =  300 , loss_val =  0.04160206\n",
+      "epochs =  9 , step =  400 , loss_val =  0.029924419\n",
+      "epochs =  9 , step =  500 , loss_val =  0.033357505\n",
+      "epochs =  10 , step =  0 , loss_val =  0.013055681\n",
+      "epochs =  10 , step =  100 , loss_val =  0.022971049\n",
+      "epochs =  10 , step =  200 , loss_val =  0.013081295\n",
+      "epochs =  10 , step =  300 , loss_val =  0.016965292\n",
+      "epochs =  10 , step =  400 , loss_val =  0.052324608\n",
+      "epochs =  10 , step =  500 , loss_val =  0.049082197\n",
+      "epochs =  11 , step =  0 , loss_val =  0.008209468\n",
+      "epochs =  11 , step =  100 , loss_val =  0.033976525\n",
+      "epochs =  11 , step =  200 , loss_val =  0.051824827\n",
+      "epochs =  11 , step =  300 , loss_val =  0.0063108667\n",
+      "epochs =  11 , step =  400 , loss_val =  0.009996894\n",
+      "epochs =  11 , step =  500 , loss_val =  0.042443614\n",
+      "epochs =  12 , step =  0 , loss_val =  0.01366878\n",
+      "epochs =  12 , step =  100 , loss_val =  0.020468988\n",
+      "epochs =  12 , step =  200 , loss_val =  0.08910759\n",
+      "epochs =  12 , step =  300 , loss_val =  0.03682572\n",
+      "epochs =  12 , step =  400 , loss_val =  0.014733764\n",
+      "epochs =  12 , step =  500 , loss_val =  0.01909013\n",
+      "epochs =  13 , step =  0 , loss_val =  0.010031767\n",
+      "epochs =  13 , step =  100 , loss_val =  0.0071397545\n",
+      "epochs =  13 , step =  200 , loss_val =  0.004904129\n",
+      "epochs =  13 , step =  300 , loss_val =  0.0857138\n",
+      "epochs =  13 , step =  400 , loss_val =  0.031814147\n",
+      "epochs =  13 , step =  500 , loss_val =  0.028616881\n",
+      "epochs =  14 , step =  0 , loss_val =  0.008333168\n",
+      "epochs =  14 , step =  100 , loss_val =  0.0055845077\n",
+      "epochs =  14 , step =  200 , loss_val =  0.019840766\n",
+      "epochs =  14 , step =  300 , loss_val =  0.011914782\n",
+      "epochs =  14 , step =  400 , loss_val =  0.017967844\n",
+      "epochs =  14 , step =  500 , loss_val =  0.035238698\n",
+      "epochs =  15 , step =  0 , loss_val =  0.01652871\n",
+      "epochs =  15 , step =  100 , loss_val =  0.0078022564\n",
+      "epochs =  15 , step =  200 , loss_val =  0.0007824084\n",
+      "epochs =  15 , step =  300 , loss_val =  0.015633473\n",
+      "epochs =  15 , step =  400 , loss_val =  0.008270033\n",
+      "epochs =  15 , step =  500 , loss_val =  0.0109907435\n",
+      "epochs =  16 , step =  0 , loss_val =  0.012801888\n",
+      "epochs =  16 , step =  100 , loss_val =  0.02192534\n",
+      "epochs =  16 , step =  200 , loss_val =  0.013680054\n",
+      "epochs =  16 , step =  300 , loss_val =  0.0077361446\n",
+      "epochs =  16 , step =  400 , loss_val =  0.018764613\n",
+      "epochs =  16 , step =  500 , loss_val =  0.005427063\n",
+      "epochs =  17 , step =  0 , loss_val =  0.0038910818\n",
+      "epochs =  17 , step =  100 , loss_val =  0.006716796\n",
+      "epochs =  17 , step =  200 , loss_val =  0.0024565354\n",
+      "epochs =  17 , step =  300 , loss_val =  0.014372124\n",
+      "epochs =  17 , step =  400 , loss_val =  0.000688629\n",
+      "epochs =  17 , step =  500 , loss_val =  0.002394493\n",
+      "epochs =  18 , step =  0 , loss_val =  0.0025428887\n",
+      "epochs =  18 , step =  100 , loss_val =  0.0154193435\n",
+      "epochs =  18 , step =  200 , loss_val =  0.014376529\n",
+      "epochs =  18 , step =  300 , loss_val =  0.0031576506\n",
+      "epochs =  18 , step =  400 , loss_val =  0.023463754\n",
+      "epochs =  18 , step =  500 , loss_val =  0.010086886\n",
+      "epochs =  19 , step =  0 , loss_val =  0.0077628596\n",
+      "epochs =  19 , step =  100 , loss_val =  0.0009979964\n",
+      "epochs =  19 , step =  200 , loss_val =  0.004166046\n",
+      "epochs =  19 , step =  300 , loss_val =  0.006039926\n",
+      "epochs =  19 , step =  400 , loss_val =  0.003682921\n",
+      "epochs =  19 , step =  500 , loss_val =  0.0116008\n",
+      "epochs =  20 , step =  0 , loss_val =  0.010648537\n",
+      "epochs =  20 , step =  100 , loss_val =  0.004282704\n",
+      "epochs =  20 , step =  200 , loss_val =  0.0010647582\n",
+      "epochs =  20 , step =  300 , loss_val =  0.0034843218\n",
+      "epochs =  20 , step =  400 , loss_val =  0.0045126025\n",
+      "epochs =  20 , step =  500 , loss_val =  0.02184252\n",
+      "epochs =  21 , step =  0 , loss_val =  0.008461868\n",
+      "epochs =  21 , step =  100 , loss_val =  0.017193127\n",
+      "epochs =  21 , step =  200 , loss_val =  0.039318662\n",
+      "epochs =  21 , step =  300 , loss_val =  0.004063643\n",
+      "epochs =  21 , step =  400 , loss_val =  0.06302449\n",
+      "epochs =  21 , step =  500 , loss_val =  0.051659085\n",
+      "epochs =  22 , step =  0 , loss_val =  0.018034076\n",
+      "epochs =  22 , step =  100 , loss_val =  0.022758467\n",
+      "epochs =  22 , step =  200 , loss_val =  0.00086576\n",
+      "epochs =  22 , step =  300 , loss_val =  0.0023673521\n",
+      "epochs =  22 , step =  400 , loss_val =  0.0012239207\n",
+      "epochs =  22 , step =  500 , loss_val =  0.0040225466\n",
+      "epochs =  23 , step =  0 , loss_val =  0.0006235261\n",
+      "epochs =  23 , step =  100 , loss_val =  0.007762488\n",
+      "epochs =  23 , step =  200 , loss_val =  0.012897411\n",
+      "epochs =  23 , step =  300 , loss_val =  0.00091500604\n",
+      "epochs =  23 , step =  400 , loss_val =  0.01997543\n",
+      "epochs =  23 , step =  500 , loss_val =  0.01699313\n",
+      "epochs =  24 , step =  0 , loss_val =  0.04464642\n",
+      "epochs =  24 , step =  100 , loss_val =  0.0008410939\n",
+      "epochs =  24 , step =  200 , loss_val =  0.0022550107\n",
+      "epochs =  24 , step =  300 , loss_val =  0.013585901\n",
+      "epochs =  24 , step =  400 , loss_val =  0.0016593222\n",
+      "epochs =  24 , step =  500 , loss_val =  0.008145335\n",
+      "epochs =  25 , step =  0 , loss_val =  0.0014021451\n",
+      "epochs =  25 , step =  100 , loss_val =  0.0012951401\n",
+      "epochs =  25 , step =  200 , loss_val =  0.022054756\n",
+      "epochs =  25 , step =  300 , loss_val =  5.8506917e-05\n",
+      "epochs =  25 , step =  400 , loss_val =  0.0048937295\n",
+      "epochs =  25 , step =  500 , loss_val =  0.12890695\n",
+      "epochs =  26 , step =  0 , loss_val =  0.00078022457\n",
+      "epochs =  26 , step =  100 , loss_val =  0.0044899397\n",
+      "epochs =  26 , step =  200 , loss_val =  0.0001983026\n",
+      "epochs =  26 , step =  300 , loss_val =  2.2901624e-05\n",
+      "epochs =  26 , step =  400 , loss_val =  0.0004552053\n",
+      "epochs =  26 , step =  500 , loss_val =  0.009450074\n",
+      "epochs =  27 , step =  0 , loss_val =  0.00075203134\n",
+      "epochs =  27 , step =  100 , loss_val =  0.029917927\n",
+      "epochs =  27 , step =  200 , loss_val =  0.00014719764\n",
+      "epochs =  27 , step =  300 , loss_val =  0.0013835016\n",
+      "epochs =  27 , step =  400 , loss_val =  6.461033e-05\n",
+      "epochs =  27 , step =  500 , loss_val =  0.0035505039\n",
+      "epochs =  28 , step =  0 , loss_val =  0.011176655\n",
+      "epochs =  28 , step =  100 , loss_val =  0.00034187638\n",
+      "epochs =  28 , step =  200 , loss_val =  0.0005307152\n",
+      "epochs =  28 , step =  300 , loss_val =  0.00026415486\n",
+      "epochs =  28 , step =  400 , loss_val =  0.003582388\n",
+      "epochs =  28 , step =  500 , loss_val =  0.036873303\n",
+      "epochs =  29 , step =  0 , loss_val =  0.045565587\n",
+      "epochs =  29 , step =  100 , loss_val =  0.0043063797\n",
+      "epochs =  29 , step =  200 , loss_val =  0.0015827714\n",
+      "epochs =  29 , step =  300 , loss_val =  0.0005928598\n",
+      "epochs =  29 , step =  400 , loss_val =  0.0054000006\n",
+      "epochs =  29 , step =  500 , loss_val =  5.3936754e-05\n",
+      "\n",
+      "elapsed time =  0:40:32.812474\n",
+      "\n",
+      "Accuracy =  0.9902\n"
      ]
     }
    ],
