--- a/Python/script/Tensorflow1.14.0/tensor 2일차.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor 2일차.ipynb
@@ -705,11 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
@@ -722,11 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "response = 6\n",
@@ -737,11 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_board(board):\n",
@@ -757,11 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 다양한 경우를 충족하기 위해 변화\n",
@@ -790,11 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 화일로 부터 말 규칙 로딩\n",
@@ -811,11 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 정해진 말규칙을 다양하게 변화하게 훈련용 데이터 확장\n",
@@ -834,8 +810,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -864,11 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def init_weights(shape):\n",
@@ -878,11 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def model(X,A1,A2,bias1,bias2):\n",
@@ -894,11 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = tf.placeholder(dtype=tf.float32, shape=[None, 9])\n",
@@ -926,8 +889,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -976,11 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_board = [-1,0,0,1,-1,-1,0,0,1]\n",
@@ -990,11 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check(board):\n",
@@ -1010,11 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdin",
