Update tensor 4일차 RNN.ipynb

--- a/Python/script/Tensorflow1.14.0/tensor 4일차 RNN.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor 4일차 RNN.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "# 4일차\n",
     "# CNN은 주변을고려해서 특성\n",
-    "# RNN은 순서적으로 고려해서 특성을 만듦"
+    "# RNN은 순서적으로 고려해서 특성을 만듦\n",
+    "# http://blog.naver.com/PostView.nhn?blogId=magnking&logNo=221323257045&redirect=Dlog&widgetTypeCall=true&directAccess=false"
    ]
   },
   {
