--- a/Python/pycharm/CNN/keras.ipynb
+++ b/Python/pycharm/CNN/keras.ipynb
@@ -2,6 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import keras \n",
+    "\n",
+    "# https://rfriend.tistory.com/431\n",
+    "import os # miscellaneous operating system interfaces\n",
+    "import shutil # high-level file operations\n",
+    "\n",
+    "base_dir = '/Users/82105/Desktop/bigdata_analysis/data'\n",
+    "img_dir = 'C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/test1/test1'\n",
+    "len(os.listdir(img_dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 30개 고양이 사진 옮기기\n",
+    "cats30_dir = os.path.join(base_dir,'dog_test')\n",
+    "\n",
+    "# 디렉토리만들기\n",
+    "os.mkdir(cats30_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이미지 복사 30장만\n",
+    "fnames = ['dog.{}.jpg'.format(i) for i in range(3000)]\n",
+    "\n",
+    "for fname in fnames:\n",
+    "    src = os.path.join(img_dir, fname)\n",
+    "    dst = os.path.join(cats30_dir, fname)\n",
+    "    shutil.copyfile(src,dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
