--- a/Python/pycharm/CNN/keras-Copy1.ipynb
+++ b/Python/pycharm/CNN/keras-Copy1.ipynb
@@ -152,6 +152,7 @@
     }
    ],
    "source": [
+    "# GPU 확인\n",
     "from tensorflow.python.client import device_lib\n",
     "device_lib.list_local_devices()"
    ]
@@ -981,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -989,39 +990,27 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\ICT01_06\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "25000"
+       "5"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,8 +1028,8 @@
     "# base_dir = '/Users/82105/Desktop/bigdata_analysis/data'\n",
     "# img_dir = 'C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/test1/test1'\n",
     "\n",
-    "base_dir = 'C:/Users/ICT01_06/Desktop/dogs-vs-cats'\n",
-    "img_dir = 'C:/Users/ICT01_06/Desktop/dogs-vs-cats/train'\n",
+    "base_dir = 'D:/Analysis/DATA/DOGS2'\n",
+    "img_dir = 'D:/Analysis/DATA/DOGS'\n",
     "\n",
     "len(os.listdir(img_dir))"
    ]
@@ -1095,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1103,18 +1092,18 @@
      "output_type": "stream",
      "text": [
       "beagle  파일 길이 :  328\n",
-      "beagle  :  C:/Users/ICT01_06/Desktop/dog/beagle\\beagle 199.jpg\n",
+      "beagle  :  D:/Analysis/DATA/DOGS/beagle\\beagle 199.jpg\n",
       "golddog  파일 길이 :  785\n",
-      "golddog  :  C:/Users/ICT01_06/Desktop/dog/golddog\\gold_dog1.jpg\n",
-      "golddog  :  C:/Users/ICT01_06/Desktop/dog/golddog\\gold_dog719.jpg\n",
-      "well  파일 길이 :  820\n",
-      "well  :  C:/Users/ICT01_06/Desktop/dog/well\\corgi0.jpg\n",
-      "well  :  C:/Users/ICT01_06/Desktop/dog/well\\corgi713.jpg\n",
-      "hoon  파일 길이 :  527\n",
-      "hoon  :  C:/Users/ICT01_06/Desktop/dog/hoon\\dachs.jpg\n",
+      "golddog  :  D:/Analysis/DATA/DOGS/golddog\\gold_dog1.jpg\n",
+      "golddog  :  D:/Analysis/DATA/DOGS/golddog\\gold_dog2440.jpg\n",
+      "corgi  파일 길이 :  970\n",
+      "corgi  :  D:/Analysis/DATA/DOGS/corgi\\corgi0.jpg\n",
+      "corgi  :  D:/Analysis/DATA/DOGS/corgi\\corgi2686.jpg\n",
+      "daks  파일 길이 :  527\n",
+      "daks  :  D:/Analysis/DATA/DOGS/daks\\dachs.jpg\n",
       "husky  파일 길이 :  502\n",
-      "husky  :  C:/Users/ICT01_06/Desktop/dog/husky\\husky1.jpg\n",
-      "ok 2962\n"
+      "husky  :  D:/Analysis/DATA/DOGS/husky\\husky1.jpg\n",
+      "ok 3112\n"
      ]
     }
    ],
@@ -1123,12 +1112,12 @@
     "import os, glob, numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "caltech_dir = \"C:/Users/ICT01_06/Desktop/dog\"\n",
-    "categories = [\"beagle\", \"golddog\", \"well\", \"hoon\", \"husky\"]\n",
+    "caltech_dir = \"D:/Analysis/DATA/DOGS\"\n",
+    "categories = [\"beagle\", \"golddog\", \"corgi\", \"daks\", \"husky\"]\n",
     "nb_classes = len(categories)\n",
     "\n",
-    "image_w = 64\n",
-    "image_h = 64\n",
+    "image_w = 128\n",
+    "image_h = 128\n",
     "\n",
     "pixels = image_h * image_w * 3\n",
     "\n",
@@ -1146,7 +1135,7 @@
     "    print(cat, \" 파일 길이 : \", len(files))\n",
     "    for i, f in enumerate(files):\n",
     "        img = Image.open(f)\n",
-    "        img = img.convert(\"RGB\")\n",
+    "        img = img.convert(\"L\")\n",
     "        img = img.resize((image_w, image_h))\n",
     "        data = np.asarray(img)\n",
     "\n",
@@ -1639,8 +1628,8 @@
     "from keras.models import load_model\n",
     "\n",
     "caltech_dir = \"C:/Users/ICT01_06/Desktop/dogs-vs-cats/tt\"\n",
-    "image_w = 64\n",
-    "image_h = 64\n",
+    "image_w = 128\n",
+    "image_h = 128\n",
     "\n",
     "pixels = image_h * image_w * 3\n",
     "\n",
@@ -1649,7 +1638,7 @@
     "files = glob.glob(caltech_dir+\"/*.*\")\n",
     "for i, f in enumerate(files):\n",
     "    img = Image.open(f)\n",
-    "    img = img.convert(\"RGB\")\n",
+    "    img = img.convert(\"L\")\n",
     "    img = img.resize((image_w, image_h))\n",
     "    data = np.asarray(img)\n",
     "    filenames.append(f)\n",
