--- a/Python/pycharm/CNN/keras.ipynb
+++ b/Python/pycharm/CNN/keras.ipynb
@@ -941,16 +941,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\82105\\Anaconda3\\envs\\tf_test\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "25000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,15 +987,15 @@
     "# base_dir = '/Users/82105/Desktop/bigdata_analysis/data'\n",
     "# img_dir = 'C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/test1/test1'\n",
     "\n",
-    "base_dir = 'C:/Users/ICT01_06/Desktop/dogs-vs-cats'\n",
-    "img_dir = 'C:/Users/ICT01_06/Desktop/dogs-vs-cats/train'\n",
+    "base_dir = 'C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats'\n",
+    "img_dir = 'C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/train/train'\n",
     "\n",
     "len(os.listdir(img_dir))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1032,43 +1051,43 @@
      "output_type": "stream",
      "text": [
       "dog_train  파일 길이 :  12500\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.0.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.10627.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.11257.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.11888.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.1268.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.1899.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.2528.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.3158.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.3789.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.4418.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.5048.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.5679.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.6308.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.6939.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.7569.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.8199.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.8829.jpg\n",
-      "dog_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/dog_train\\dog.9459.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.0.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.10627.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.11257.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.11888.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.1268.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.1899.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.2528.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.3158.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.3789.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.4418.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.5048.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.5679.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.6308.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.6939.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.7569.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.8199.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.8829.jpg\n",
+      "dog_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/dog_train\\dog.9459.jpg\n",
       "cat_train  파일 길이 :  12500\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.0.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.10627.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.11257.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.11888.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.1268.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.1899.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.2528.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.3158.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.3789.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.4418.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.5048.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.5679.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.6308.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.6939.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.7569.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.8199.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.8829.jpg\n",
-      "cat_train  :  C:/Users/ICT01_06/Desktop/dogs-vs-cats/cat_train\\cat.9459.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.0.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.10627.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.11257.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.11888.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.1268.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.1899.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.2528.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.3158.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.3789.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.4418.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.5048.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.5679.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.6308.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.6939.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.7569.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.8199.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.8829.jpg\n",
+      "cat_train  :  C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats/cat_train\\cat.9459.jpg\n",
       "ok 25000\n"
      ]
     }
@@ -1078,7 +1097,7 @@
     "import os, glob, numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "caltech_dir = \"C:/Users/ICT01_06/Desktop/dogs-vs-cats\"\n",
+    "caltech_dir = \"C:/Users/82105/Desktop/bigdata_analysis/data/dogs-vs-cats\"\n",
     "categories = [\"dog_train\", \"cat_train\"]\n",
     "nb_classes = len(categories)\n",
     "\n",
@@ -1101,7 +1120,7 @@
     "    print(cat, \" 파일 길이 : \", len(files))\n",
     "    for i, f in enumerate(files):\n",
     "        img = Image.open(f)\n",
-    "        img = img.convert(\"RGB\")\n",
+    "        img = img.convert(\"L\") # Gray로~ RGB로 할거면 RGB로 하는데 데이터크기가 커서..\n",
     "        img = img.resize((image_w, image_h))\n",
     "        data = np.asarray(img)\n",
     "\n",
